apps/clusters/feathre-core/base-apps/shlink/backendtrafficpolicy.yaml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: shlink-ratelimit
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: shlink
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 5
            unit: Second
