apps/clusters/feathre-core/base-apps/shlink/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: shlink-cloudflare-tunnel
  annotations:
    cloudflare-tunnel-ingress-controller.strrl.dev/backend-protocol: http
spec:
  ingressClassName: cloudflare-tunnel
  rules:
    - host: shlink.onelitefeather.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shlink
                port:
                  number: 8080
    - host: 1lf.link
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: shlink
                port:
                  number: 8080
